Git_WGBH_QC/src/objects/Orphan__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>batchname__c</fullName>
        <label>Batch Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>classname__c</fullName>
        <label>Class Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>exception_message__c</fullName>
        <label>Exception Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>object_id__c</fullName>
        <label>Object Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orphan_type__c</fullName>
        <label>orphan_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_id__c</fullName>
        <label>TA Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Orphan or Disowned</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orphans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>